--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1320px;
+  max-width: 100vw;
   margin: 0 auto;
+  min-height: 100vh;
 }
