--- a/src/components/tariffs/tariffs.module.css
+++ b/src/components/tariffs/tariffs.module.css
@@ -94,7 +94,24 @@
     display: flex;
     flex-direction: column;
     padding: 33px 20px 0 30px;
+    position: relative;
+}
 
+.currentTariff {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 134px;
+    height: 24px;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    border-radius: 10px;
+    background-color: #3BA5E0;
+    position: absolute;
+    right: 10px;
+    top: 12px;
 }
 
 .priceContainer {
