--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -51,6 +51,7 @@
 .loginPanel {
     display: flex;
     gap: 40px;
+    align-items: center;
 }
 
 .divider {
@@ -61,7 +62,9 @@
     opacity: .6;
 }
 
-.button {
+.authLink {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
     font-size: 14px;
     font-weight: 500;
     line-height: 17px;
@@ -72,15 +75,14 @@
     padding: 5px 12px;
 }
 
-.registerButton {
-    color: rgb(0, 0, 0);
+.registerLink {
     font-weight: 400;
     opacity: .4;
     background: none;
     padding: 0;
 }
 
-.button:hover {
+.authLink:hover {
     cursor: pointer;
 }
 
@@ -105,7 +107,6 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-
 }
 
 .text {
