Add library for date inputs

--- a/src/components/searchForm/searchForm.module.css
+++ b/src/components/searchForm/searchForm.module.css
@@ -113,7 +113,7 @@ input::placeholder {
     width: 176px;
 }
 
-input[type="date"]::-webkit-inner-spin-button,
+/* input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
     -webkit-appearance: none;
@@ -123,10 +123,9 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field,
 input[type="date"]:in-range::-webkit-datetime-edit-month-field,
 input[type="date"]:in-range::-webkit-datetime-edit-day-field,
 input[type="date"]:in-range::-webkit-datetime-edit-text,
-input[type="date"]:in-range::-webkit-inner-spin-button,
 input[type="date"]:in-range::-webkit-clear-button {
-    color: transparent;
-}
+    display: none;
+} */
 
 .checkboxsContainer {
     display: flex;
