--- a/src/components/searchForm/searchForm.module.css
+++ b/src/components/searchForm/searchForm.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    padding: 69px 0 64px;
+    padding-top: 70px;
 }
 
 .headingContainer {
@@ -63,13 +63,12 @@
     display: flex;
     flex-direction: column;
     width: 372px;
-    gap: 30px;
+    gap: 17px;
 }
 
 .inputGroup {
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
 .label {
@@ -77,6 +76,7 @@
     font-weight: 400;
     line-height: 22px;
     position: relative;
+    padding-bottom: 20px;
 }
 
 .input {
@@ -217,4 +217,18 @@ input[type="checkbox"]:not(:checked) {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
+}
+
+.errorIndicator {
+    color: rgb(255, 89, 89);
+}
+
+.errorMessage {
+    height: 19px;
+    color: rgb(255, 89, 89);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 1%;
+    padding-top: 2px;
 }
