--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -36,3 +36,10 @@
     font-weight: 400;
     line-height: 17px;
 }
+
+@media screen and (max-width: 1350px) {
+    .container {
+        width: 768px;
+        padding: 0 10px;
+    }
+}
