--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -178,8 +178,9 @@
 
 @media screen and (max-width: 1350px) {
     .container {
-        width: 768px;
-        padding: 0 10px;
+        width: 728px;
+        padding: 0;
+        margin: 0 auto;
     }
 
     .userInfoContainer {
