--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -44,3 +44,17 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (max-width: 745px) {
+    .container {
+        width: 335px;
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    .image {
+        width: 111px;
+        height: 111px;
+        margin-bottom: 52px;
+    }
+}
