--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -59,17 +59,60 @@
 }
 
 .divider {
+    height: 575px;
     margin-top: 70px;
+    width: 100%;
+    overflow: hidden;
+    align-self: center;
+}
+
+.dividerImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
 }
 
 @media screen and (max-width: 1350px) {
     .intro {
         flex-direction: column;
-        min-height: 500px;
+        min-height: 0;
         align-items: center;
     }
 
     .image {
         position: initial;
+    }
+}
+
+@media screen and (max-width: 745px) {
+    .heading {
+        padding-top: 30px;
+        font-size: 28px;
+        line-height: 34px;
+    }
+
+    .text {
+        max-width: 325px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .link {
+        margin-top: 32px;
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .image {
+        width: 347px;
+        height: 327px;
+        margin-top: 39px;
+    }
+
+    .divider {
+        width: 347px;
+        height: 392px;
+        margin-top: 80px;
     }
 }
