--- a/src/components/tariffs/tariffs.module.css
+++ b/src/components/tariffs/tariffs.module.css
@@ -134,6 +134,7 @@
     text-decoration-line: line-through;
     opacity: .5;
 }
+
 .descriptionContainer {
     display: flex;
     flex-direction: column;
@@ -181,6 +182,7 @@
     border: none;
     align-self: center;
     margin-top: 55px;
+    padding: 0;
 }
 
 .button:hover {
@@ -206,5 +208,55 @@
         flex-direction: column;
         align-items: center;
         gap: 43px;
+    }
+}
+
+@media screen and (max-width: 745px) {
+    .tariffs {
+        max-width: 335px;
+    }
+
+    .heading {
+        font-size: 28px;
+        line-height: 34px;
+        align-self: flex-start;
+    }
+    
+    .item {
+        width: 335px;
+        min-height: 512px;
+    }
+
+    .infoContainer {
+        padding-top: 20px;
+    }
+
+    .icon {
+        width: 20%
+    }
+
+    .text {
+        width: 273px;
+    }
+
+    .descriptionContainer {
+        padding-top: 36px;
+    }
+
+    .listItem {
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    .button {
+        width: 286px;
+        font-size: 18px;
+        line-height: 22px;
+        border-radius: 5px;
+        margin-top: 37px;
+    }
+
+    .currentTariff {
+        top: 3px;
     }
 }
