--- a/src/components/loginForm/loginForm.module.css
+++ b/src/components/loginForm/loginForm.module.css
@@ -97,9 +97,15 @@
     border: 1px solid rgb(199, 199, 199);
     border-radius: 5px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+    outline: none;
 }
 
-.error {
+.errorInput {
+    border: 1px solid rgb(255, 89, 89);
+    box-shadow: 0px 0px 10px 0px rgba(255, 89, 89, 0.2);
+}
+
+.errorText {
     color: rgb(255, 89, 89);
     font-size: 14px;
     font-weight: 400;
