--- a/src/components/loginForm/loginForm.module.css
+++ b/src/components/loginForm/loginForm.module.css
@@ -101,6 +101,7 @@
 }
 
 .errorInput {
+    color: rgb(255, 89, 89);
     border: 1px solid rgb(255, 89, 89);
     box-shadow: 0px 0px 10px 0px rgba(255, 89, 89, 0.2);
 }
