--- a/src/components/searchForm/searchForm.module.css
+++ b/src/components/searchForm/searchForm.module.css
@@ -89,6 +89,7 @@
     border-radius: 5px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
     padding: 13px 22px;
+    outline: none;
 }
 
 input::placeholder {
@@ -221,6 +222,12 @@ input[type="checkbox"]:not(:checked) {
 
 .errorIndicator {
     color: rgb(255, 89, 89);
+}
+
+.errorInput {
+    color: rgb(255, 89, 89);
+    border: 1px solid rgb(255, 89, 89);
+    box-shadow: 0px 0px 10px 0px rgba(255, 89, 89, 0.2);
 }
 
 .errorMessage {
@@ -363,6 +370,10 @@ input[type="checkbox"]:not(:checked) {
         width: 379px;
         height: 403px;
         transform: translateX(40px);
+    }
+
+    .errorMessage {
+        align-self: center;
     }
     
 }
