--- a/src/components/burgerMenu/burgerMenu.css
+++ b/src/components/burgerMenu/burgerMenu.css
@@ -148,3 +148,22 @@
 .burgerMenuLoginLink:hover {
     background: rgb(67, 206, 203);
 }
+
+.logoutButton {
+    width: 295px;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 1%;
+    border-radius: 5px;
+    background: rgb(124, 227, 225);
+    padding: 15px 0;
+    text-align: center;
+    border: none;
+}
+
+.logoutButton:hover {
+    cursor: pointer;
+    background: rgb(67, 206, 203);
+}
