--- a/src/components/listItem/listItem.module.css
+++ b/src/components/listItem/listItem.module.css
@@ -63,6 +63,7 @@
     display: flex;
     height: 50px;
     align-items: center;
+    gap: 10px;
 }
 
 .documentType {
@@ -99,6 +100,8 @@
     border-radius: 5px;
     background: rgb(124, 227, 225);
     padding: 14px;
+    color: black;
+    text-align: center;
 }
 
 .documentButton:hover {
