--- a/src/components/spinner/spinner.module.css
+++ b/src/components/spinner/spinner.module.css
@@ -8,9 +8,26 @@
     }
 }
 
+.container {
+    grid-area: 1 / 1 / 3 / 3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 11px;
+}
+
 .spinner {
-    width: 24px;
-    height: 24px;
+    height: 65%;
     animation: spinner 2s linear infinite;
-    justify-self: end;
+}
+
+.text {
+    max-width: 186px;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
 }
