--- a/src/components/listItem/listItem.module.css
+++ b/src/components/listItem/listItem.module.css
@@ -52,11 +52,20 @@
 }
 
 .documentHeading {
+    height: 62px;
+    width: 100%;
     font-size: 26px;
     font-weight: 500;
     line-height: 31px;
     letter-spacing: 2%;
-    padding-top: 24px;
+    margin-top: 24px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    text-overflow: ellipsis;
+    white-space: normal;
 }
 
 .documentTypeContainer {
@@ -80,6 +89,14 @@
 
 .documentDescription {
     height: 228px;
+    width: 100%;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 11;
+    line-clamp: 11;
+    text-overflow: ellipsis;
+    white-space: normal;
     padding-top: 20px;
 }
 
@@ -153,12 +170,17 @@
     }
     
     .documentHeading {
+        height: 69px;
         font-size: 19px;
         line-height: 23px;
-        padding-top: 21px;
-        padding-bottom: 6px;
+        margin-top: 21px;
+        margin-bottom: 6px;
+        -webkit-line-clamp: 3;
+        line-clamp: 3;
+        text-overflow: ellipsis;
+        white-space: normal;
     }
-    
+
     .documentType {
         min-width: 132px;
         font-size: 10px;
@@ -167,8 +189,10 @@
     
     .documentDescription {
         width: 290px;
-        min-height: 255px;
+        height: 255px;
         padding-top: 18px;
+        -webkit-line-clamp: 14;
+        line-clamp: 14;
     }
     
     .documentButtonContainer {
