Fix article loading, refactor code, fix slider resize error

--- a/src/components/loginForm/loginForm.module.css
+++ b/src/components/loginForm/loginForm.module.css
@@ -115,6 +115,10 @@
     align-self: center;
 }
 
+.serverErrorText {
+    height: auto;
+}
+
 .submitButton {
     color: rgb(255, 255, 255);
     font-size: 22px;
